--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "lint": "eslint lib test",
     "lint-ts": "npx typescript@~3.6.0 --build types",
     "lint-fix": "eslint lib test --fix",
-    "test": "mocha test/**/*.test.js"
+    "test": "mocha test/**/*.test.js",
+    "build": "babel src -d lib"
   },
   "dependencies": {
     "@types/got": "^9.6.9",
@@ -54,6 +55,10 @@
     "p-any": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-async-to-generator": "^7.14.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
     "@types/passport": "^1.0.4",
@@ -92,5 +97,11 @@
     "scripts": {
       "postchangelog": "sed -i '' -e 's/### \\[/## [/g' CHANGELOG.md"
     }
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-transform-modules-commonjs",
+      "@babel/plugin-transform-async-to-generator"
+    ]
   }
 }
